# ENG-M-401

./: .flake8  .gitignore  LICENSE  Makefile  README.md  contributing.md  dev-dependencies.txt  pyproject.toml  requirements.txt
.github/workflow/: test.yaml
.github/workflows/: main.yaml
eng_m/: .gitignore  __init__.py
eng_m/core/: __init__.py  api.py  depreciable.py  interest.py  loan.py  mortgage.py  project.py  series.py
eng_m/series/: __init__.py  _equal_payment.py  _geometric_gradient.py  _linear_gradient.py
eng_m/util/: exceptions.py  maps.py  time.py  types.py
tests/: test_a2.py  test_a3.py  test_a4.py  test_a5.py  test_depreciable.py  test_fin.py  test_lectures.py  test_loan.py  test_series.py
