[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0"]

[project]
name = "eng_m"
version = "0.1.0"
authors = [
    {name = "Sunny Nian", email = "sunny@nian.ca"}
]
description = "Tools for the University of Alberta's ENG M 401 class."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "sympy >= 1.11.1",
    "numpy >= 1.24.2"
]

[project.urls]
documentation = "https://nian.ca/docs/eng_m"
repository = "https://github.com/Mcnuget5/eng-m-401"

[project.optional-dependencies]
dev = ["mypy >= 1.1.1", "black >= 23.3.0", "pytest-cov >= 4.0.0", "flake8 >= 6.0.0"]
